Add CannotSetPolicyTests which don't involve a DPC.
Test: atest CtsDevicePolicyTestCases
Bug: 198407058
Bug: 197909954
Bug: 193792462
Fixes: 205943237
Change-Id: I7de7555071495bef9496fc869198abf4a0a119b2